@@ -1,16 +1,18 @@
 package org.sarge.jove.platform.vulkan.memory;
 
-import static org.sarge.lib.Validation.requireOneOrMore;
+import static org.sarge.jove.util.Validation.requireOneOrMore;
 
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 import org.sarge.jove.common.TransientObject;
+import org.sarge.jove.platform.vulkan.core.LogicalDevice;
 
 /**
  * A <i>pool allocator</i> delegates allocation requests to a {@link MemoryPool}.
  * <p>
  * This implementation creates a memory pool for <b>each</b> memory type on demand which grows as required.
+ * Memory can be pre-allocated using the {@link #add(MemoryType, long)} method.
  * <p>
  * @author Sarge
  */
@@ -20,12 +22,12 @@ public class PoolAllocator extends Allocator implements TransientObject {
 
 	/**
 	 * Constructor.
-	 * @param allocator		Delegate allocator
-	 * @param pages			Number of pages to allocate for a new block
-	 * @see #granularity()
+	 * @param device		Logical device
+	 * @param types			Memory types
+	 * @param pages			Minimum number of pages per memory allocation
 	 */
-	public PoolAllocator(Allocator allocator, int pages) {
-		super(allocator);
+	public PoolAllocator(LogicalDevice device, MemoryType[] types, int pages) {
+		super(device, types);
 		this.pages = requireOneOrMore(pages);
 	}
 
@@ -33,14 +35,22 @@ public class PoolAllocator extends Allocator implements TransientObject {
 	 * @return Amount of free space
 	 */
 	public long free() {
-		return pools.values().stream().mapToLong(MemoryPool::free).sum();
+		return pools
+				.values()
+				.stream()
+				.mapToLong(MemoryPool::free)
+				.sum();
 	}
 
 	/**
 	 * @return Total amount of allocated memory
 	 */
 	public long size() {
-		return pools.values().stream().mapToLong(MemoryPool::size).sum();
+		return pools
+				.values()
+				.stream()
+				.mapToLong(MemoryPool::size)
+				.sum();
 	}
 
 	/**
@@ -56,7 +66,19 @@ public class PoolAllocator extends Allocator implements TransientObject {
 	 * @return Memory pools ordered by type
 	 */
 	public Map<MemoryType, MemoryPool> pools() {
-		return Map.copyOf(pools);
+		return Collections.unmodifiableMap(pools);
+	}
+
+	/**
+	 * Pre-allocates free memory of the given type.
+	 * @param type Memory type
+	 * @param size Size
+	 */
+	public void add(MemoryType type, long size) {
+		final DeviceMemory memory = super.allocate(type, size);
+		final Block block = new Block(memory);
+		final MemoryPool pool = pool(type);
+		pool.add(block);
 	}
 
 	@Override
@@ -71,20 +93,15 @@ public class PoolAllocator extends Allocator implements TransientObject {
 	/**
 	 * Allocates memory from a new block.
 	 * @param type 		Memory type
-	 * @param size 		Size (bytes)
+	 * @param size 		Size
 	 * @param pool		Memory pool
 	 * @return Allocated memory
 	 * @throws AllocationException if a new block cannot be allocated
 	 */
 	private DeviceMemory create(MemoryType type, long size, MemoryPool pool) throws AllocationException {
-		// Allocate memory for a new block
-		final DeviceMemory mem = super.allocate(type, size);
-
-		// Add new block to pool
-		final Block block = new Block(mem);
+		final DeviceMemory memory = super.allocate(type, size);
+		final Block block = new Block(memory);
 		pool.add(block);
-
-		// Allocate from this block
 		return block.allocate(size);
 	}
 
